docs/api/qiskit/0.19/qiskit.circuit.library.SdgGate.mdx
---
title: SdgGate (v0.19)
description: API reference for qiskit.circuit.library.SdgGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SdgGate
---

# SdgGate

<Class id="qiskit.circuit.library.SdgGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/s.py" signature="SdgGate(label=None)" modifiers="class">
  Single qubit S-adjoint gate (\~Z\*\*0.5).

  It induces a $-\pi/2$ phase.

  This is a Clifford gate and a square-root of Pauli-Z.

  **Matrix Representation:**

$$
\begin{split}Sdg = \begin{pmatrix}
1 & 0 \\
0 & -i
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌─────┐
  q_0: ┤ Sdg ├
       └─────┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new Sdg gate.

  ## Attributes

  <span id="sdggate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.SdgGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="sdggate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.SdgGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="sdggate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.SdgGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="sdggate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.SdgGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="sdggate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.SdgGate.add_decomposition" signature="SdgGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="sdggate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.SdgGate.assemble" signature="SdgGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="sdggate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.SdgGate.broadcast_arguments" signature="SdgGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="sdggate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.SdgGate.c_if" signature="SdgGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="sdggate-control" />

  ### control

  <Function id="qiskit.circuit.library.SdgGate.control" signature="SdgGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="sdggate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.SdgGate.copy" signature="SdgGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="sdggate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.SdgGate.inverse" signature="SdgGate.inverse()">
    Return inverse of Sdg (SGate).
  </Function>

  <span id="sdggate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.SdgGate.is_parameterized" signature="SdgGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="sdggate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.SdgGate.mirror" signature="SdgGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="sdggate-power" />

  ### power

  <Function id="qiskit.circuit.library.SdgGate.power" signature="SdgGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="sdggate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.SdgGate.qasm" signature="SdgGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="sdggate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.SdgGate.repeat" signature="SdgGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="sdggate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.SdgGate.to_matrix" signature="SdgGate.to_matrix()">
    Return a numpy.array for the Sdg gate.
  </Function>
</Class>

